@@ -17,6 +17,7 @@
 + Menubar and toolbar can be inserted into project as top-level objects (they will
   be generated as stand-alone classes which can be instantiated later or directly into XRC).
   See 'Forms' palette.
+^ Significantly improved speed of adding/removing of project items on large projects.
 
 08/27/2009 Version 3.01.64 (Beta)
 * FS#389 - Center option for dialogs should be set to wxBOTH by default
